PostGIS 2.4.9
2020/06/XX

  * Bug Fixes and Enhancements *

  - #4480, Geography Distance inconsistent with Intersects (Paul Ramsey)
  - #4481, Improve libprotobuf detection for old systems (Paul Ramsey)
  - #4475, Avoid reading into empty ptarra (Paul Ramsey)
  - #4492, Fix ST_Simplify ignoring the value of the 3rd parameter (Raúl Marín)
  - #4494, Fix ST_Simplify output having an outdated bbox (Raúl Marín)
  - #4493, Fix ST_RemoveRepeatedPoints output having an outdated bbox (Raúl Marín)
  - #4495, Fix ST_SnapToGrid output having an outdated bbox (Raúl Marín)
  - #4506, Remove tolerance in point-in-ring stabline tests (Paul Ramsey)
  - #4518, Backport system views to make upgrade to PostGIS3 cleaner (Paul Ramsey)
  - #4519, Fix getSRIDbySRS crash (Raúl Marín)
  - #4534, Fix leak in lwcurvepoly_from_wkb_state (Raúl Marín)
  - #4536, Fix leak in lwcollection_from_wkb_state (Raúl Marín)
  - #4537, Fix leak in WKT collection parser (Raúl Marín)
  - #4546, Fix ST_ConcaveHull under FDW (Raúl Marín)
  - #4547, Fix AddRasterConstraints handling of empty tables (Sandro Santilli)
  - #4549, Fix schema qualification of internal types (Raúl Marín)
  - #4546, Fix PLPGSQL functions missing the schema qualification (Raúl Marín)
  - #4588, Fix update when st_union(geometry) doesn't exist (Raúl Marín)
  - #4621, Prevent stack overflow when parsing WKB (Raúl Marín)
  - #4646, Fix gserialized_cmp incorrect comparison (dkvash)
  - #4652, Fix several memory related bugs in ST_GeomFromGML (Raúl Marín)
  - #4661, Fix access to spatial_ref_sys with a non default schema (Raúl Marín)
  - #4699, crash on null input to ST_Union(raster, otherarg) (Jaime Casanova, 2ndQuadrant)


PostGIS 2.4.8
2019/08/11

  * Bug Fixes and Enhancements *

  - #4361, Fix postgis_type_name with (GEOMETRYM,3) (Matt Bretl)
  - #4326, Fix circular arc distance calculation (Paul Ramsey)
  - #4388, AddRasterConstraints: Ignore NULLs when generating constraints (Raúl Marín)